# cladding

./: .gitignore  Cargo.toml  Containerfile.cladding  Containerfile.codex  Containerfile.gemini  Containerfile.sandbox  README.md  bundle  cladding  cladding.sh  destroy  down  launch-gemini  pods.yaml  reload-proxy-config  up
cladding/: Cargo.toml  build.rs
cladding/src/: assets.rs  cli.rs  config.rs  error.rs  fs_utils.rs  lib.rs  main.rs  network.rs  podman.rs  pods.rs
cladding/tests/: cli_tests.rs
config/: squid.conf
config-template/: cli_domains.lst  cli_host_ports.lst  cli_packages  mcp-run-policy.json  sandbox_commands.json  squid.conf
config-template/sandbox_commands/: curl.rego  main.rego
crates/mcp-run/src/: lib.rs  raw.rs
docs/features/cladding-expose-port-proxy/: notes.md  prd.md  questions.md
docs/features/cladding-mounts-volumes/: notes.md  prd.md  questions.md
docs/features/cladding-rust-port/: notes.md  plan.md  prd.md  questions.md
docs/features/cladding-up-dynamic-network-selection/: notes.md  prd.md  questions.md
docs/features/initial-implementation/: notes.md
docs/features/mcp-run-raw-endpoint/: notes.md  prd.md  questions.md
docs/features/mcp-run-rego-policy-engine/: notes.md  prd.md  questions.md
docs/features/proxy/: summary.md
docs/issues/: 2026-02-17-proxy-connect-failures.md
examples/sandbox_commands/: cargo.rego  npm.rego  uv.rego
haproxy/: haproxy.cfg  sandbox_domains.lst  startup.sh
mcp-run/: Cargo.toml  README.md  network-policy.json
mcp-run/src/: executor.rs  lib.rs  main.rs  mcp.rs  policy.rs  raw.rs  remote.rs
proxy/: cli_domains.lst  squid.conf  startup.sh
scripts/: jail_cli.sh  jail_sandbox.sh  proxy_startup.sh
(+8 files in other folders)
