[package]
name = "cladding"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
doctest = false

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.33", features = ["derive"] }
include_dir = "0.7.4"
libc = "0.2.170"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
