[package]
name = "mcp-run"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
regex = "1.12.3"
rmcp = { version = "0.16.0", features = ["transport-streamable-http-server", "transport-streamable-http-client-reqwest", "client"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
tempfile = "3.25.0"
